--- a/ChatterClient/ChatterClient.csproj
+++ b/ChatterClient/ChatterClient.csproj
@@ -63,6 +63,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AsyncCommand.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="ChatroomViewModel.cs" />
     <Compile Include="Converters\InverseBooleanConverter.cs" />
